# mcp-fleet-core

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  greptile-gate.yml  python.yml
src/mcp_fleet_core/: __init__.py  auth.py  config.py  egress.py  logging.py  secretscan.py  telemetry.py
tests/: test_auth.py  test_config.py  test_egress.py  test_logging.py  test_secretscan.py  test_telemetry.py
