[project]
name = "mcp-fleet-core"
version = "0.2.0"
description = "Shared cross-cutting controls for the fleet's FastMCP servers: bearer auth, call logging, egress allowlist, secret-scan"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "starlette>=0.37",
    "mcp[cli]>=1.5.0",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_fleet_core"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
addopts = "--import-mode=importlib"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.27",
    "ruff>=0.14.13",
]
